# tarea_clase_14_programacion_1

./: Clase_12_SQL_Hector_Sanchez.ipynb  DB_Propia.db  README.md  main.py  pyproject.toml
