[project]
name = "tarea-clase-14-programacion-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.5",
    "mysql-connector-python>=9.5.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pyinstaller>=6.15.0",
    "pyodbc>=5.3.0",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "texttable>=1.7.0",
    "webdriver-manager>=4.0.2",
]
